--- a/oversteer/main.ui
+++ b/oversteer/main.ui
@@ -785,7 +785,7 @@
                               <object class="GtkBox">
                                 <property name="visible">True</property>
                                 <property name="can-focus">False</property>
-                                <property name="halign">center</property>
+                                <property name="halign">start</property>
                                 <property name="spacing">32</property>
                                 <child>
                                   <object class="GtkBox">
